<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sgpa.activitys.ViewPlanoDeAula"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:gravity="center"
        android:text="@string/titulo" />

    <TextView
        android:id="@+id/sub_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal|center"
        android:layout_weight="0.16"
        android:gravity="center_horizontal|center"
        android:text="@string/sub_titulo" />

    <TextView
        android:id="@+id/descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal|center"
        android:layout_weight="0.28"
        android:gravity="center_horizontal|center"
        android:text="@string/descricao" />

    <ListView
        android:id="@+id/list_momentos"
        android:layout_width="match_parent"
        android:layout_height="108dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_momentos_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|end"
        android:layout_marginRight="30dp"
        android:clickable="true"
        app:backgroundTint="@android:color/holo_blue_light"
        app:fabSize="mini"
        app:srcCompat="@android:drawable/ic_media_play"
        tools:ignore="RtlHardcoded" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/edit_plano_de_aula_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:onClick="editPlanoDeAula"
        app:backgroundTint="@android:color/holo_blue_light"
        app:elevation="0dp"
        app:fabSize="mini"
        app:srcCompat="@android:drawable/ic_menu_edit" />
</LinearLayout>
